--- a/PoC/typographie/styles/style.css
+++ b/PoC/typographie/styles/style.css
@@ -7,6 +7,8 @@ h1, h2, h3 {
   font-weight: normal;
 }
 
-.max-width {
+.calc-text {
+  position: absolute;
   display: inline-block;
+  top: -9999px;
 }
