--- a/PoC/typographie/styles/style.css
+++ b/PoC/typographie/styles/style.css
@@ -50,6 +50,14 @@ h1, h2, h3 {
   padding: 5px;
 }
 
+.highlight {
+  background-color: lightblue;
+  position: relative;
+}
+
+.highlight-margin {
+  position: absolute;
+}
 
 .clearfix:after {
      visibility: hidden;
