--- a/PoC/typographie/styles/style.css
+++ b/PoC/typographie/styles/style.css
@@ -17,6 +17,11 @@ h1, h2, h3 {
   padding: 20px;
 }
 
+#styled-text * {
+  cursor: pointer;
+  margin: 0;
+}
+
 .colors {
   margin: 40px 0;
   padding: 20px;
@@ -55,8 +60,9 @@ h1, h2, h3 {
   position: relative;
 }
 
-.highlight-margin {
+.highlight-padding {
   position: absolute;
+  z-index: 2;
 }
 
 .clearfix:after {
